Skip to content

GitLab

  • Projects
  • Groups
  • Snippets
  • Help
    • Loading...
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
gst-plugins-bad
gst-plugins-bad
  • Project overview
    • Project overview
    • Details
    • Activity
    • Releases
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 1,023
    • Issues 1,023
    • List
    • Boards
    • Labels
    • Service Desk
    • Milestones
  • Merge Requests 201
    • Merge Requests 201
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Operations
    • Operations
    • Incidents
    • Environments
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • CI/CD
    • Repository
    • Value Stream
  • Snippets
    • Snippets
  • Members
    • Members
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GStreamer
  • gst-plugins-badgst-plugins-bad
  • Issues
  • #1051

Closed
Open
Created Aug 13, 2019 by Lim Siew Hoon@SiewHoonContributor

msdkmjpegdec: 4k video transcode mjpeg to h264 will fail intermittently when using msdk plugins.

Gstreamer framework version: 1.16.0 Media driver: intel-media-19.2.1 libva: 2.5.0 MSDK library: 19.2.1 OS: Yocto Linux Platform: APL-I

Command: gst-launch-1.0 filesrc location=Puppies_3840x2160_165mbps_60fps_422.avi ! avidemux ! jpegparse ! msdkmjpegdec ! msdkh264enc ! filesink location=output.h264

Error message: 0:00:00.216491111 27466 0x5617fa4b6c00 LOG msdkdec gstmsdkdec.c:111:gst_msdkdec_get_oldest_frame: Oldest frame is 3 0:00:00.049999998 and 0 frames left 0:00:00.257495720 27466 0x5617fa4b6c00 INFO msdkdec gstmsdkdec.c:911:gst_msdkdec_handle_frame: mfxBitStream=> DataLength:383526 DataOffset:0 MaxLength:383526 0:00:00.257599870 27466 0x5617fa4b6c00 LOG msdkdec gstmsdkdec.c:111:gst_msdkdec_get_oldest_frame: Oldest frame is 3 0:00:00.049999998 and 1 frames left 0:00:00.257619405 27466 0x5617fa4b6c00 ERROR msdkdec gstmsdkdec.c:614:gst_msdkdec_finish_task: Couldn't find the cached MSDK surface 0:00:00.257868759 27466 0x5617fa4b6c00 LOG msdkdec gstmsdkdec.c:111:gst_msdkdec_get_oldest_frame: Oldest frame is 3 0:00:00.049999998 and 0 frames left 0:00:00.257934089 27466 0x5617fa4b6c00 ERROR msdkdec gstmsdkdec.c:614:gst_msdkdec_finish_task: Couldn't find the cached MSDK surface 0:00:00.257958776 27466 0x5617fa4b6c00 WARN msdkdec gstmsdkdec.c:1323:gst_msdkdec_drain: failed to finish the task 0x7fa00016fb30, but keep draining for the remaining frames 0:00:00.257989835 27466 0x5617fa4b6c00 LOG msdkdec gstmsdkdec.c:111:gst_msdkdec_get_oldest_frame: Oldest frame is 3 0:00:00.049999998 and 0 frames left ERROR: from element /GstPipeline:pipeline0/GstAviDemux:avidemux0: Internal data stream error. Additional debug info: ../../../gst-plugins-good-1.16.0/gst/avi/gstavidemux.c(5780): gst_avi_demux_loop (): /GstPipeline:pipeline0/GstAviDemux:avidemux0: streaming stopped, reason error (-5)

Edited Aug 15, 2019 by Lim Siew Hoon
Assignee
Assign to
None
Milestone
None
Assign milestone
Time tracking
None
Due date
None